# http-loop-data

./: Cargo.toml  LICENSE  README.md  Rocket.toml
env/: .env
src/: handler.rs  main.rs
src/resources/html/: index.html.j2
src/utils/: config.rs  logger.rs
