[package]
name = "http-loop-data"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
thiserror = "1"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
chrono = { version = "0.4", features = ["unstable-locales"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_dyn_templates = { version = "0.2.0", features = [
    "handlebars",
    "tera",
    "minijinja",
] }
dotenv = "0.15.0"
